Ajustes nos códigos e implementação do menu mobile responsivo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="menu-principal">
             <div class="btn-logo">
                 <div class="btn-menu">
-                    <button><i class="fa-solid fa-bars"></i></button>
+                    <button class="abrir"><i class="fa-solid fa-bars"></i></button>
                 </div>
                 <div class="logo">
                     <img src="img/logo-p.png" alt="Logo">
@@ -34,6 +34,69 @@
                 <button>Login/Register</button>
             </div>
         </nav>
+
+        <ul class="menu-mobile">
+            <div class="btn-registro-mobile">
+                <button>Login/Register</button>
+            </div>
+
+            <div class="linha"></div>
+
+            <div class="logo-grande">
+                <img src="img/logo-g.png" alt="Logo RE grande">
+            </div>
+
+            <div class="linha"></div>
+
+            <li>
+                <a href="#">Notícias</a>
+            </li>
+            <li>
+                <a href="#">História</a>
+            </li>
+            <li>
+                <a href="#">Time Line</a>
+            </li>
+            <li>
+                <a href="#">Conteúdos</a>
+            </li>
+            <li>
+                <a href="#">Dados</a>
+            </li>
+            <li>
+                <a href="#">Embaixador</a>
+            </li>
+
+            <div class="linha"></div>
+
+            <div class="idioma">
+                <h3>Idioma</h3>
+
+                <div>
+                    <i class="fa-solid fa-language"></i>
+                    <a href="#">Inglês</a>
+                </div>
+            </div>
+
+            <div class="linha"></div>
+
+            <div class="x-musk">
+                <h3>Twitter</h3>
+                <div>
+                    <i class="fa-brands fa-x-twitter"></i>
+                    <a href="#">Resident Evil Portal</a>
+                </div>
+            </div>
+
+            <div class="linha"></div>
+
+            <div class="sobre-site">
+                <div>
+                    <i class="fa-solid fa-question"></i>
+                    <a href="#">sobre este site</a>
+                </div>
+            </div>
+        </ul>
     </header>
 
     <!-- JavaScript -->
