Implementação do banner

--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@
         </ul>
     </header>
 
+    <main>
+        <section class="banner">
+            <div class="img-banner">
+                <img src="img/letter_re.png" alt="Resident Evil">
+            </div>
+        </section>
+    </main>
+
     <!-- JavaScript -->
     <script src="js/script.js"></script>
 </body>
