Ajustes do menu e implementação dos botões de seleção

--- a/index.html
+++ b/index.html
@@ -100,9 +100,16 @@
     </header>
 
     <main>
-        <section class="banner">
+        <div class="banner">
             <div class="img-banner">
                 <img src="img/letter_re.png" alt="Resident Evil">
+            </div>
+        </div>
+
+        <section class="faixa-controles">
+            <div class="controles">
+                <button>Sobre</button>
+                <button>História</button>
             </div>
         </section>
     </main>
