Implementação de seção de enredo do jogo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
+
 <body>
     <!-- Menu -->
     <header class="cabecalho">
@@ -110,6 +111,28 @@
             <div class="controles">
                 <button>Sobre</button>
                 <button>História</button>
+            </div>
+        </section>
+
+        <section class="sobre-jogo">
+            <div class="enredo">
+                <p>
+                    A Capcom lançou Resident Evil em 1996
+                </p>
+                <p>
+                    e definiu para sempre o mundo do horror de sobrevivência.
+                </p>
+                <p>
+                    Sua definição de gênero survival-horror coloca os jogadores em um mundo aterrorizante e os desafia a
+                    tentar escapar.
+                </p>
+                <p>
+                    Viver ou morrer: cada decisão importava.
+                </p>
+                <p>
+                    Esta combinação de estratégia e sustos trazida por Resident Evil arrebatou os jogadores, ganhando
+                    aclamação em todo o mundo.
+                </p>
             </div>
         </section>
     </main>
