Estrutura HTML das imagens dos jogos

--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
             </div>
         </div>
 
-        <section class="faixa-controles">
+        <div class="faixa-controles">
             <div class="controles">
                 <button>Sobre</button>
                 <button>História</button>
             </div>
-        </section>
+        </div>
 
         <section class="sobre-jogo">
             <div class="enredo">
@@ -133,6 +133,27 @@
                     Esta combinação de estratégia e sustos trazida por Resident Evil arrebatou os jogadores, ganhando
                     aclamação em todo o mundo.
                 </p>
+            </div>
+        </section>
+
+        <section class="container-img-jogos">
+            <div class="images-jogo">
+                <figure>
+                    <img src="img/re-jogo1.jpg" alt="Resident Evil 1">
+                    <figcaption>Resident Evil 1</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/re-jogo2.jpg" alt="Resident Evil 2">
+                    <figcaption>Resident Evil 2</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/re-jogo3.jpg" alt="Resident Evil 3">
+                    <figcaption>Resident Evil 3</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/re-jogo4.jpg" alt="Resident Evil 4">
+                    <figcaption>Resident Evil 4</figcaption>
+                </figure>
             </div>
         </section>
     </main>
