Criação da seção de vendas e dos jogos

--- a/index.html
+++ b/index.html
@@ -156,6 +156,33 @@
                 </figure>
             </div>
         </section>
+
+        <section class="venda-franquia">
+            <div class="desc-venda">
+                <p>
+                    A série Resident Evil já vendeu mais de 100 milhões de cópias,
+                </p>
+                <p>
+                    e expandiu-se para uma variedade de outras mídias, incluindo filmes CGI,
+                </p>
+                <p>
+                    atrações do parque temático e até blockbusters de Hollywood.
+                </p>
+            </div>
+        </section>
+
+        <section class="franquia">
+            <div class="apresentacao-games">
+                <h3>Vamos jogar os jogos!</h3>
+
+                <button class="btn-game">Clique aqui para ver os jogos RE.</button>
+            </div>
+            <div class="btn-top">
+                <a href="#">
+                    <i class="fa-solid fa-chevron-up"></i>
+                </a>
+            </div>
+        </section>
     </main>
 
     <!-- JavaScript -->
